<resources>

    <!-- ############ -->
    <!-- General text -->
    <!-- ############ -->
    <string name="app_name">Shell</string>
    <string name="menu_settings">Settings</string>
    
    <!-- ############ -->
    <!-- Widget  Text -->
    <!-- ############ -->
    <string name="widget_label">Shell Widget</string>
    <string name="widget_primary">Hello!</string>
    
    <!-- ################ -->
    <!-- Application text -->
    <!-- ################ -->
    
    <!-- activity_main -->
    <string name="title_activity_main">Shell</string>
    <string name="welcome_text">Welcome To Shell…</string>
    <string name="loading">Loading…</string>
    
    <!-- activity_menu -->
    <string name="title_activity_menu">Main Menu</string>
    <string name="my_files">My Files</string>
	<string name="take_picture">Take Picture</string>
    <string name="screen_capture">Screen Capture</string>
    <string name="app_lock">App Lock</string>
    <string name="app_sound">App Sound</string>
    <string name="app_paint">App Paint</string>
    
    <!-- activity_appLock -->
    <string name="title_activity_appLock">appLockActivity</string>
	<string name="password_a">Password</string>
	<string name="password_b">Repeat Password</string>
    <string name="set_button">Set Password</string>
	
	<!-- activity_about -->
	<string name="links">Created with help from:</string>
	<string name="links_picture_icon">VisualPharm [http://www.visualpharm.com]</string> 
	<string name="links_capture_icon">Artua [http://www.artua.com]</string>
	<string name="links_lock_icon">Artua [http://www.artua.com]</string>
	
	

</resources>